# finanzas-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml
evals/: evaluation.xml
src/finanzas_mcp/: __init__.py  app.py  server.py  tools_operaciones.py  tools_ratios.py  tools_tributario.py  tools_valoracion.py
tests/: smoke_mcp.py  test_calculos.py
